# electric-n-body-cuda

./: .clangd  .fuse_hidden0000b25500000045  .gitignore  LICENSE  PERFORMANCE_COMPARISON.md  PLOTS_README.md  compile_commands.json  create_comparison_plots.py  create_video_fast.py  create_video_simple.py  makefile  meson.build  native-file.ini  nbody.code-workspace  paraview.sh  particles.txt  sample_generator.py
electric-n-body-cpu/: Makefile  README.md  nbody_cpu  nbody_profile  particles.txt
electric-n-body-cpu/include/: particle.h  particles.h  physics.h  vtk_writer.h
electric-n-body-cpu/profiling/: Makefile.profile  plot_results.py  profile_main.cpp  run_profiling.sh
electric-n-body-cpu/profiling/results/: io_overhead.csv  scaling_particles.csv  scaling_threads.csv  step_timings.csv
electric-n-body-cpu/src/: main.cpp  particles.cpp  physics.cpp  vtk_writer.cpp
electric-n-body-cpu/vtk/: output_000000.vtk  output_000001.vtk  output_000370.vtk
include/: Array2D.cuh  compute.cuh  frame_queue.cuh  particle.cuh  particle.hpp  particles.cuh  particles.hpp  physics_system.cuh  renderer_interface.cuh  root_renderer.cuh  simulation_config.cuh  simulation_engine.cuh  vtk_binary_renderer.cuh  vtk_binary_writer.cuh  vtk_dump_renderer.cuh  vtk_writer.cuh
profiling/: REPORT.md  benchmark_scalability.sh  build_profile.sh  device_info.sh  generate_plots.py  generate_samples.sh  matrix_version.nsys-rep  matrix_version.sqlite  profile_ncu.sh  profile_nsys.sh  run_all.sh  tiled_version.nsys-rep  tiled_version.sqlite
profiling_optimized/: IMPROVEMENT_REPORT.md  benchmark_scalability.sh  nsys_4096_opt.nsys-rep  nsys_4096_opt.sqlite  nsys_4096_opt_kernsum_cuda_gpu_kern_sum.csv  profile_nsys.sh
profiling_optimized/results/2026-02-15/scalability/: scalability.csv  (+1 more)
profiling_optimized/samples/: particles_1024.txt  particles_256.txt  particles_4096.txt  particles_512.txt  particles_64.txt
profiling_original/: benchmark_scalability.sh  nsys_4096_original.nsys-rep
profiling_original/samples/: particles_128.txt  particles_2048.txt  particles_8192.txt
src/: compute.cu  main.cu  particles.cu  physics_system.cu  root_renderer.cu  simulation_engine.cu  vtk_binary_renderer.cu  vtk_binary_writer.cu  vtk_renderer.cu  vtk_writer.cu
vtk/: output_000000.vtk  output_000001.vtk  output_000002.vtk  output_000003.vtk  output_000004.vtk  output_000005.vtk  output_000006.vtk  output_000007.vtk  output_000008.vtk  output_000009.vtk  output_000010.vtk  output_000011.vtk  output_000012.vtk  output_000013.vtk  output_000014.vtk  output_000015.vtk  output_000016.vtk  output_000017.vtk  output_000018.vtk  output_000019.vtk  output_000020.vtk  output_000021.vtk  output_000022.vtk  output_000023.vtk  output_000024.vtk  output_000025.vtk  output_000026.vtk  output_000027.vtk  output_000028.vtk  output_000029.vtk  output_000030.vtk  output_000031.vtk  output_000032.vtk  output_000033.vtk  output_000034.vtk  output_000035.vtk  output_000036.vtk  output_000037.vtk  output_000038.vtk  output_000039.vtk  (+961 more)
(+2 files in other folders)
